# VideoChat

./: .gitignore  EXPERIMENT_SUMMARY.md  README.md  main.py  pyproject.toml
examples/: basic_usage.py  compare_models.py
outputs/: Hair Love_fastvlm_results.json  Hair Love_qwen3_results.json  README.md
outputs/comparison/: fastvlm_vs_qwen3_25shots.csv  fastvlm_vs_qwen3_25shots_fixed.csv  qwen2_vs_qwen3_comparison.csv  qwen3_vs_fastvlm_comparison.csv
src/videoindex/: __init__.py  cli.py
src/videoindex/annotators/: __init__.py  base.py  fastvlm.py  quen2.py  qwen3.py
src/videoindex/config/: __init__.py  settings.py
src/videoindex/processing/: __init__.py  pipeline.py
tests/: __init__.py  test_annotators.py
